# tmnct-news-serverless

./: README.md
cdk/: cdk.json  package-lock.json  package.json
cdk/lambda/crawler/: .gitignore  Dockerfile  README.md  fetch_news_function.py  lambda_function.py  notify_news_function.py  pyproject.toml
cdk/lambda/crawler/crawler/: credentials.py  settings.py  twitter_credentials.py  vercel_credentials.py
cdk/lambda/crawler/crawler/domains/: __init__.py  news_fetcher.py  news_repository.py  news_saver.py
cdk/lambda/crawler/crawler/domains/adapters/: __init__.py  input_data_adapter.py
cdk/lambda/crawler/crawler/domains/services/: __init__.py  notify_news_service.py
cdk/lambda/crawler/crawler/infrastructures/: __init__.py  news_repository.py  rss_news_fetcher.py  s3_news_saver.py
cdk/lambda/crawler/crawler/infrastructures/adapters/: __init__.py  news_data_adapter.py
cdk/lambda/crawler/crawler/infrastructures/services/: __init__.py  email_news_service.py  tweet_news_service.py
cdk/lambda/crawler/crawler/models/: __init__.py  fetch_and_save_news_result.py  news.py  news_category.py
cdk/lambda/crawler/crawler/usecases/: fetch_and_save_news_usecase.py  notify_news_usecase.py
cdk/lambda/crawler/crawler/utils/: aws_s3.py  twitter.py
cdk/lambda/crawler/tests/infrastructures/: test_news_data_adapter.py  test_news_repository.py
cdk/lambda/crawler/tests/models/: test_news.py
cdk/lambda/crawler/tests/services/: test_tweet_news_service.py
cdk/lambda/crawler/tests/usecases/: test_fetch_and_save_news_usecase.py
export_old_data/: .standard.yml  Gemfile  (+2 more)
(+22 files in other folders)
