[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Takuya Mukohira <takuya.mk96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
feedparser = "^6.0.10"
pytest-mock = "^3.10.0"
dataclasses-json = "^0.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
