[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Takuya Mukohira <takuya.mk96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
feedparser = "^6.0.10"
pytest-mock = "^3.10.0"
dataclasses-json = "^0.5.7"
boto3 = "^1.26.8"
tweepy = "^4.12.1"


[tool.poetry.dev-dependencies]
black = "^22.10.0"
pyproject-flake8 = "^5.0.4"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120


[tool.flake8]
max-line-length = 120
max-complexity = 20
